--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/skittles.css" media=”screen” />
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        Responsive Layout
+    </h1>
+
+    <div class ="row">
+        <div class="col-lg-1">
+            <p>Box One</p>
+        </div>
+        <div class="col-lg-2">
+            <p>Box Two</p>
+        </div>
+        <div class="col-lg-3">
+            <p>Box Three</p>
+        </div>
+    </div>
 </body>
 </html>
