--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/skittles.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="css/skittles.css" />
     <title>Document</title>
 </head>
 <body>
