--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/skittles.css" />
-    <title>Document</title>
+    <title>Bee's Knees</title>
 </head>
 <body>
     <h1>
@@ -12,13 +12,16 @@
 
     <div class ="row">
         <div class="col-lg-1">
-            <p>Box One</p>
+            <h3 class="labels">Soap</h3>
+            <p>this is soap</p>
         </div>
         <div class="col-lg-2">
-            <p>Box Two</p>
+            <h3 class="labels">Honey</h3>
+            <p>this is honey</p>
         </div>
         <div class="col-lg-3">
-            <p>Box Three</p>
+            <h3 class="labels">Chapstick</h3>
+            <p>this is chapstick</p>
         </div>
     </div>
 </body>
