--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -16,7 +16,7 @@
             <p>this is soap</p>
         </div>
         <div class="col-lg-2">
-            <h3 class="labels">Honey</h3>
+            <h3 class="honey">Honey</h3>
             <p>this is honey</p>
         </div>
         <div class="col-lg-3">
