--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -12,7 +12,7 @@
 
     <div class ="row">
         <div class="col-lg-1">
-            <h3 class="labels">Soap</h3>
+            <h3 class="soap">Soap</h3>
             <p>this is soap</p>
         </div>
         <div class="col-lg-2">
@@ -20,7 +20,7 @@
             <p>this is honey</p>
         </div>
         <div class="col-lg-3">
-            <h3 class="labels">Chapstick</h3>
+            <h3 class="chapstick">Chapstick</h3>
             <p>this is chapstick</p>
         </div>
     </div>
