--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -11,7 +11,7 @@
     </h1>
 
     <div class ="row">
-        <div class="col-lg-1">
+        <div class="col-lg-1 text">
             <h3 class="soap">Soap</h3>
             <p>this is soap</p>
         </div>
