--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -11,15 +11,15 @@
     </h1>
 
     <div class ="row">
-        <div class="col-lg-1 text">
+        <div class="col-lg-1 backtext">
             <h3 class="soap">Soap</h3>
             <p>this is soap</p>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 backtext">
             <h3 class="honey">Honey</h3>
             <p>this is honey</p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 backtext">
             <h3 class="chapstick">Chapstick</h3>
             <p>this is chapstick</p>
         </div>
