--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/skittles.css" />
+    <link rel="stylesheet" type="text/css" href="css/s2.css" />
     <title>Bee's Knees</title>
 </head>
+
+<body>
+    <h1>
+        Bee's Knees
+    </h1>
+    
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <p>
+            Item 1
+        </p>
+    </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <p>
+            Item 2
+        </p>
+    </div>
+      <div class="col-lg-4 col-md-12 col-sm-12">
+        <p>
+            Item 3
+        </p>
+    </div>
+    </div>
+    
+</body>
+
+
+<!--
 <body>
     <h1>
         Responsive Layout
@@ -26,3 +54,4 @@
     </div>
 </body>
 </html>
+-->
