--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -13,19 +13,30 @@
     
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12">
+        <h2>
+            Honey
+        </h2>
         <p>
             Item 1
         </p>
     </div>
       <div class="col-lg-4 col-md-6 col-sm-12">
+        <h2>
+            Soap
+        </h2>
         <p>
             Item 2
         </p>
     </div>
       <div class="col-lg-4 col-md-12 col-sm-12">
+        <div class="item">
+        <h2>
+            Chapstick
+        </h2>
         <p>
             Item 3
         </p>
+        </div>
     </div>
     </div>
     
